--- a/Biblo/Biblo.csproj
+++ b/Biblo/Biblo.csproj
@@ -65,6 +65,12 @@
     <Compile Include="GUI\PrincipalAdmin.Designer.cs">
       <DependentUpon>PrincipalAdmin.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\PrincipalLector.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\PrincipalLector.Designer.cs">
+      <DependentUpon>PrincipalLector.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Splash.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +87,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\PrincipalAdmin.resx">
       <DependentUpon>PrincipalAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\PrincipalLector.resx">
+      <DependentUpon>PrincipalLector.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Splash.resx">
       <DependentUpon>Splash.cs</DependentUpon>
