Cambios en GUI.

--- a/Biblo/Biblo.csproj
+++ b/Biblo/Biblo.csproj
@@ -137,6 +137,18 @@
     <Compile Include="GUI\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\misDatos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\misDatos.Designer.cs">
+      <DependentUpon>misDatos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\misPrestamos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\misPrestamos.Designer.cs">
+      <DependentUpon>misPrestamos.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Principal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -160,6 +172,78 @@
     </Compile>
     <Compile Include="GUI\Splash.Designer.cs">
       <DependentUpon>Splash.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\verAutores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\verAutores.Designer.cs">
+      <DependentUpon>verAutores.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\verCategoria.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\verCategoria.Designer.cs">
+      <DependentUpon>verCategoria.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\verEditoriales.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\verEditoriales.Designer.cs">
+      <DependentUpon>verEditoriales.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\verEjemplares.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\verEjemplares.Designer.cs">
+      <DependentUpon>verEjemplares.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\verEmpleado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\verEmpleado.Designer.cs">
+      <DependentUpon>verEmpleado.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\verLectores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\verLectores.Designer.cs">
+      <DependentUpon>verLectores.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\verLibrosAdministrador.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\verLibrosAdministrador.Designer.cs">
+      <DependentUpon>verLibrosAdministrador.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\verMoras.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\verMoras.Designer.cs">
+      <DependentUpon>verMoras.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\verPagos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\verPagos.Designer.cs">
+      <DependentUpon>verPagos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\verPrestamos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\verPrestamos.Designer.cs">
+      <DependentUpon>verPrestamos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\verUsuariosEmpleados.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\verUsuariosEmpleados.Designer.cs">
+      <DependentUpon>verUsuariosEmpleados.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\verUsuariosLectores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\verUsuariosLectores.Designer.cs">
+      <DependentUpon>verUsuariosLectores.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -208,6 +292,12 @@
     <EmbeddedResource Include="GUI\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\misDatos.resx">
+      <DependentUpon>misDatos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\misPrestamos.resx">
+      <DependentUpon>misPrestamos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\Principal.resx">
       <DependentUpon>Principal.cs</DependentUpon>
     </EmbeddedResource>
@@ -219,6 +309,42 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Splash.resx">
       <DependentUpon>Splash.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\verAutores.resx">
+      <DependentUpon>verAutores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\verCategoria.resx">
+      <DependentUpon>verCategoria.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\verEditoriales.resx">
+      <DependentUpon>verEditoriales.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\verEjemplares.resx">
+      <DependentUpon>verEjemplares.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\verEmpleado.resx">
+      <DependentUpon>verEmpleado.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\verLectores.resx">
+      <DependentUpon>verLectores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\verLibrosAdministrador.resx">
+      <DependentUpon>verLibrosAdministrador.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\verMoras.resx">
+      <DependentUpon>verMoras.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\verPagos.resx">
+      <DependentUpon>verPagos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\verPrestamos.resx">
+      <DependentUpon>verPrestamos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\verUsuariosEmpleados.resx">
+      <DependentUpon>verUsuariosEmpleados.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\verUsuariosLectores.resx">
+      <DependentUpon>verUsuariosLectores.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
