--- a/General/General.csproj
+++ b/General/General.csproj
@@ -78,6 +78,36 @@
     <Compile Include="GUI\AutorEdicion.Designer.cs">
       <DependentUpon>AutorEdicion.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\AutoresGestion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\AutoresGestion.Designer.cs">
+      <DependentUpon>AutoresGestion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\CategoriasGestion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\CategoriasGestion.Designer.cs">
+      <DependentUpon>CategoriasGestion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\EditorialesGestion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\EditorialesGestion.Designer.cs">
+      <DependentUpon>EditorialesGestion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\EmpleadosGestion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\EmpleadosGestion.Designer.cs">
+      <DependentUpon>EmpleadosGestion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\LectoresGestion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\LectoresGestion.Designer.cs">
+      <DependentUpon>LectoresGestion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
@@ -96,6 +126,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\AutorEdicion.resx">
       <DependentUpon>AutorEdicion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\AutoresGestion.resx">
+      <DependentUpon>AutoresGestion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\CategoriasGestion.resx">
+      <DependentUpon>CategoriasGestion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\EditorialesGestion.resx">
+      <DependentUpon>EditorialesGestion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\EmpleadosGestion.resx">
+      <DependentUpon>EmpleadosGestion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\LectoresGestion.resx">
+      <DependentUpon>LectoresGestion.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
