--- a/Prestamos/Prestamos.csproj
+++ b/Prestamos/Prestamos.csproj
@@ -43,11 +43,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CLS\Prestamos.cs" />
+    <Compile Include="GUI\misPrestamos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\misPrestamos.Designer.cs">
+      <DependentUpon>misPrestamos.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\PrestamoEdicion.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\PrestamoEdicion.Designer.cs">
       <DependentUpon>PrestamoEdicion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\PrestamosGestion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\PrestamosGestion.Designer.cs">
+      <DependentUpon>PrestamosGestion.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -58,8 +70,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="GUI\misPrestamos.resx">
+      <DependentUpon>misPrestamos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\PrestamoEdicion.resx">
       <DependentUpon>PrestamoEdicion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\PrestamosGestion.resx">
+      <DependentUpon>PrestamosGestion.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
