--- a/Libros/Libros.csproj
+++ b/Libros/Libros.csproj
@@ -69,6 +69,11 @@
       <DependentUpon>LibrosGestion.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="GUI\EjemplarEdicion.resx">
@@ -82,6 +87,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\LibrosGestion.resx">
       <DependentUpon>LibrosGestion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
